Add creation context support